force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/bundledProduct__c.field-meta.xml
<CustomField>
    <fullName>bundledProduct__c</fullName>
    <label>bundledProduct</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>bundledProduct</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>