force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/manufacturerName__c.field-meta.xml
<CustomField>
    <fullName>manufacturerName__c</fullName>
    <label>manufacturerName</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>manufacturerName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>