force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/mastered__c.field-meta.xml
<CustomField>
    <fullName>mastered__c</fullName>
    <label>mastered</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>mastered</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>