force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/simpleProduct__c.field-meta.xml
<CustomField>
    <fullName>simpleProduct__c</fullName>
    <label>simpleProduct</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>simpleProduct</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>