force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/stepQuantityUnit__c.field-meta.xml
<CustomField>
    <fullName>stepQuantityUnit__c</fullName>
    <label>stepQuantityUnit</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>stepQuantityUnit</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>