force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/taxClassID__c.field-meta.xml
<CustomField>
    <fullName>taxClassID__c</fullName>
    <label>taxClassID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>taxClassID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>