force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/unit__c.field-meta.xml
<CustomField>
    <fullName>unit__c</fullName>
    <label>unit</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>unit</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>