force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/unitQuantityValue__c.field-meta.xml
<CustomField>
    <fullName>unitQuantityValue__c</fullName>
    <label>unitQuantityValue</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>unitQuantityValue</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>