force-app/main/default/objects/GoodsProduct_bkcr_prd__dll/fields/validFrom__c.field-meta.xml
<CustomField>
    <fullName>validFrom__c</fullName>
    <label>validFrom</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>validFrom</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>